---
source: crates/pina_codama_renderer/src/__tests.rs
assertion_line: 214
expression: content
---
//! This code was AUTOGENERATED by `pina_codama_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from Codama IDLs instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::new_without_default,
	clippy::too_many_arguments
)]

#[allow(clippy::len_without_is_empty)]
#[derive(pina::PinaPod)]
#[pinapod(crate = pina::pinapod, no_inherent)]
pub struct CounterState {
/// On-chain counter state.
/// 
/// The `#[account]` macro generates:
/// - A discriminator field (`CounterAccountType::CounterState`) as the first
/// byte.
/// - A `CounterStateZc` storage view generated by `pinapod::PinaPod`.
/// - `HasDiscriminator` linking this struct to
/// `CounterAccountType::CounterState`.
/// - `initialize` and `try_from_bytes` helpers for caller-owned storage.
/// 
/// Layout (11 bytes total):
/// ```text
/// | offset | size | field                     |
/// |--------|------|---------------------------|
/// | 0      | 1    | discriminator             |
/// | 1      | 1    | migration version byte    |
/// | 2      | 1    | bump                      |
/// | 3      | 8    | count (little-endian u64) |
/// ```
	pub discriminator: u8,
	pub migration_version: u8,
	/// The PDA bump seed, stored on-chain so we don't need to re-derive it.
	pub bump: u8,
	/// The current counter value. The `PinaPod` view stores it using its
	/// alignment-one, little-endian representation.
	pub count: u64,
}

pub const COUNTER_STATE_DISCRIMINATOR: u8 = 1u8;

pub const COUNTER_STATE_MIGRATION_VERSION: u8 = 0u8;

impl CounterState {
	pub const LEN: usize = core::mem::size_of::<CounterStateZc>();

	/// Initialize and validate account storage in one pass.
	///
	/// The destination is cleared again if configuration or validation fails.
	pub fn initialize(
		data: &mut [u8],
		configure: impl FnOnce(&mut CounterStateZc),
	) -> Result<&mut CounterStateZc, solana_program_error::ProgramError> {
		<Self as pina::PinaPodFixed>::initialize(data, |account| {
			configure(account);
			account.discriminator = COUNTER_STATE_DISCRIMINATOR;
			account.migration_version = COUNTER_STATE_MIGRATION_VERSION;
			Ok(())
		})
		.map_err(|_| solana_program_error::ProgramError::InvalidAccountData)
	}

	pub fn from_bytes(data: &[u8]) -> Result<&CounterStateZc, solana_program_error::ProgramError> {
		let account = <Self as pina::PinaPodFixed>::read_exact(data)
			.map_err(|_| solana_program_error::ProgramError::InvalidAccountData)?;
		if account.discriminator != COUNTER_STATE_DISCRIMINATOR {
			return Err(solana_program_error::ProgramError::InvalidAccountData);
		}
		if account.migration_version != COUNTER_STATE_MIGRATION_VERSION {
			return Err(solana_program_error::ProgramError::InvalidAccountData);
		}
		Ok(account)
	}

	pub fn from_bytes_mut(data: &mut [u8]) -> Result<&mut CounterStateZc, solana_program_error::ProgramError> {
		let account = <Self as pina::PinaPodFixed>::read_exact_mut(data)
			.map_err(|_| solana_program_error::ProgramError::InvalidAccountData)?;
		if account.discriminator != COUNTER_STATE_DISCRIMINATOR {
			return Err(solana_program_error::ProgramError::InvalidAccountData);
		}
		if account.migration_version != COUNTER_STATE_MIGRATION_VERSION {
			return Err(solana_program_error::ProgramError::InvalidAccountData);
		}
		Ok(account)
	}
}

impl CounterState {
	pub fn find_pda(authority: &solana_pubkey::Pubkey) -> (solana_pubkey::Pubkey, u8) {
		solana_pubkey::Pubkey::find_program_address(
			&[
				"counter".as_bytes(),
				authority.as_ref(),
			],
			&crate::COUNTER_PROGRAM_ID,
		)
	}

	pub fn create_pda(authority: &solana_pubkey::Pubkey, bump: u8) -> Result<solana_pubkey::Pubkey, solana_pubkey::PubkeyError> {
		solana_pubkey::Pubkey::create_program_address(
			&[
				"counter".as_bytes(),
				authority.as_ref(),
				&[bump],
			],
			&crate::COUNTER_PROGRAM_ID,
		)
	}
}


/// Whether raw account bytes are stale for this contract: the envelope names this account's discriminator and carries a version older than
/// [`COUNTER_STATE_MIGRATION_VERSION`]. Current or foreign bytes return false; decoding explains the difference.
///
/// Version 0 is the initial version, so no bytes can ever be stale.
pub fn counter_state_needs_migration(_data: &[u8]) -> bool {
	false
}


/// Why `CounterState::try_from_bytes` rejected account bytes.
#[derive(Clone, Copy, Debug, PartialEq, Eq)]
pub enum CounterStateVersionError {
	/// The bytes do not decode as this account's layout at all.
	InvalidData,
	/// The envelope names this account but the stored version predates this client: migrate the account on-chain, then retry.
	Stale { stored: u8 },
	/// The envelope names this account but the stored version is newer than this client's schema: upgrade this client.
	Future { stored: u8 },
}

impl core::fmt::Display for CounterStateVersionError {
	fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
		match self {
			Self::InvalidData => write!(f, "invalid CounterState account data"),
			Self::Stale { stored } => write!(
				f,
				"migration version mismatch: expected 0, received {stored} (the data predates this client; migrate it by sending a transaction to the program, or decode it with a client generated from an older IDL)"
			),
			Self::Future { stored } => write!(
				f,
				"migration version mismatch: expected 0, received {stored} (the data was written by a newer program; upgrade this client)"
			),
		}
	}
}

impl CounterState {
	/// Decodes current-version bytes and tells stale envelopes (migrate the account) apart from future ones (upgrade this client). The failure message mirrors the generated JavaScript decoder. For the strict current-only convenience returning `ProgramError`, see [`CounterState::from_bytes`].
	pub fn try_from_bytes(
		data: &[u8],
	) -> Result<&CounterStateZc, CounterStateVersionError> {
		let account = <Self as pina::PinaPodFixed>::read_exact(data)
			.map_err(|_| CounterStateVersionError::InvalidData)?;
		if account.discriminator != COUNTER_STATE_DISCRIMINATOR {
			return Err(CounterStateVersionError::InvalidData);
		}
		if account.migration_version > COUNTER_STATE_MIGRATION_VERSION {
			return Err(CounterStateVersionError::Future { stored: account.migration_version });
		}
		Ok(account)
	}
}

#[cfg(test)]
mod counter_state_version_error_tests {
	use super::*;

	fn envelope(version: u8) -> Vec<u8> {
		let mut data = vec![0_u8; core::mem::size_of::<CounterStateZc>()];
		data[..1].copy_from_slice(&[1]);
		data[1..2].copy_from_slice(&version.to_le_bytes());
		data
	}

	#[test]
	fn stale_and_future_versions_are_distinguishable() {
		let error = CounterState::try_from_bytes(&envelope(1 as u8)).err().expect("a future envelope must fail");
		assert_eq!(error, CounterStateVersionError::Future { stored: 1 });
		assert_eq!(CounterStateVersionError::Future { stored: 1 }.to_string(), "migration version mismatch: expected 0, received 1 (the data was written by a newer program; upgrade this client)");
		assert!(
			CounterState::try_from_bytes(&envelope(0 as u8)).is_ok(),
			"the current version must decode",
		);
	}
}
